--- a/alembic.ini
+++ b/alembic.ini
@@ -1,8 +1,6 @@
-# Alembic configuration file
-
 [alembic]
 # path to migration scripts
-script_location = app/db/migrations
+script_location = ./app/db/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
@@ -11,37 +9,27 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)
 prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
-# as well as the filename.
 timezone =
 
-# max length of characters to apply to the
-# "slug" field
+# max length of characters to apply to the "slug" field
 truncate_slug_length = 40
 
-# set to 'true' to run the environment during
-# the 'revision' command, regardless of autogenerate
+# set to 'true' to run the environment during the 'revision' command
 revision_environment = false
 
-# set to 'true' to allow .pyc and .pyo files without
-# a source .py file to be detected as revisions in the
-# versions/ directory
+# set to 'true' to allow .pyc and .pyo files without a source .py file
 sourceless = false
 
-# version path separator; As mentioned above, this is the character used to split
-# version_locations. The default within new alembic.ini files is "os", which uses
-# os.pathsep. If this key is omitted entirely, it falls back to the legacy
-# behavior of splitting on spaces and/or commas.
-version_path_separator = :
+# version number format
+version_num_digits = 3
 
-# set to 'true' to search source files recursively
-# in each "version_locations" directory
-recursive_version_locations = false
-
-# the output encoding used when revision files
-# are written from script.py.mako
+# the output encoding used when revision files are written from script.py.mako
 output_encoding = utf-8
 
-# Logging configuration
+sqlalchemy.url = driver://user:pass@localhost/dbname
+
+[post_write_hooks]
+
 [loggers]
 keys = root,sqlalchemy,alembic
 
