--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# FastAPI & Uvicorn
+# FastAPI & Web Server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
@@ -6,30 +6,31 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 asyncpg==0.29.0
 alembic==1.12.1
+psycopg2-binary==2.9.7
 
 # Authentication & Security
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 
-# Storage & Images
-boto3==1.34.0
-aioboto3==12.0.0
+# AWS SDK & Storage
+boto3>=1.29.0,<1.35.0
+aioboto3>=11.3.0
 Pillow==10.1.0
 
 # HTTP Client for Midtrans
 httpx==0.25.2
 aiofiles==23.2.1
 
-# Environment & Configuration
-pydantic==2.5.0
+# Validation & Schemas
+pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+email-validator==2.1.0
 
 # Development & Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
 factory-boy==3.3.0
 
 # Linting & Formatting
