--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"
-    command: ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+      - "${APP_PORT:-8123}:${APP_PORT:-8123}"
+    command: sh -c "python -m uvicorn app.main:app --host 0.0.0.0 --port $${APP_PORT:-8123} --reload"
